Updates using form

--- a/Index.html
+++ b/Index.html
@@ -1,22 +1,37 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html>		<!--For latest HTML version-->
+<html>		<!--For starting any page-->
 <head>
-	<title>My page</title>
+	<title>My page</title>	<!--page title-->
 </head>
-<body>
+<body>		<!--body shown up in the page-->
+	<img src="/Users/mac/education/HTML/Test_html/Images/V5ZbihIURte8KtkhdF5NYw_thumb_b62.jpg" height="130" width="130"><br>		<!--Include image and attributes(pixels)-->
 	##Hello world##!!
 	<h1>Header#1</h1>
-	<ol>
+	<ol>		<!--how to declare ordered list-->
 		<li>Item#1</li>
 		<li>Item#2</li>
 		<li>Item#3</li>
 	</ol>
 	<h2>Header#2</h2>
-	<ul>
+	<ul>		<!--how to declare un-ordered list-->
 		<li>Item#4</li>
 		<li>Item#5</li>
 	</ul>
+	<table>
+		<th>Name</th> <!--how to declare table headers-->
+		<th>Age</th>
+		<th>Sex</th>
+		<tr>		<!--how to declare table rows-->
+			<td>Hazem</td>	<!--how to include table data subsequently-->
+			<td>28</td>
+			<td>M</td>
+		</tr>
+	</table>
 	<h3>Header#3</h3>
+	<form>	<!--How to make a user form (User name form)-->
+		<input type="text" placeholder="Full name" name="name"> <!--prompt user to enter data (takes 3 attributes)-->
+		<button>Submit</button>	<!--Make a button-->
+	</form>
 	<ul>
 		<li>Item#6</li>
 		<li>Item#7</li>
